--- a/app/src/main/res/layout/dashboard_reserve_release_list.xml
+++ b/app/src/main/res/layout/dashboard_reserve_release_list.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_11sdp"
-        android:layout_marginTop="@dimen/_11sdp"
+        android:layout_marginTop="@dimen/_7sdp"
         android:orientation="horizontal">
 
         <TextView
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_semibold"
-            android:text=""
+            android:text="kjhghdsfsdghjk"
             android:textColor="@color/dark_grey"
             android:textSize="@dimen/_10ssp" />
 
@@ -60,8 +60,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/_1sdp"
+        android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginHorizontal="@dimen/_11sdp"
-        android:layout_marginTop="@dimen/_7sdp"
         android:background="@color/blue_light" />
 
 </LinearLayout>
