--- a/app/src/main/res/layout/activity_business_sales_order.xml
+++ b/app/src/main/res/layout/activity_business_sales_order.xml
@@ -261,6 +261,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/salesreservell"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="horizontal"
