--- a/app/src/main/res/layout/activity_monthly_service_fee.xml
+++ b/app/src/main/res/layout/activity_monthly_service_fee.xml
@@ -141,10 +141,12 @@
                                 android:layout_width="@dimen/_68sdp"
                                 android:layout_height="@dimen/_14sdp"
                                 android:layout_marginTop="@dimen/_6sdp"
+                                android:background="@drawable/txn_completed_bg"
                                 android:fontFamily="@font/opensans_bold"
                                 android:gravity="center"
                                 android:text=""
-                                android:textSize="@dimen/_7ssp" />
+                                android:textColor="@color/active_green"
+                                android:textSize="@dimen/_7sdp" />
 
                         </LinearLayout>
 
