--- a/app/src/main/res/layout/activity_refund_transaction.xml
+++ b/app/src/main/res/layout/activity_refund_transaction.xml
@@ -94,7 +94,7 @@
                                 <LinearLayout
                                     android:id="@+id/lyAmount"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="@dimen/_80sdp"
+                                    android:layout_height="@dimen/_75sdp"
                                     android:layout_marginLeft="@dimen/_5sdp"
                                     android:orientation="horizontal">
 
@@ -194,13 +194,13 @@
 
                                 <androidx.cardview.widget.CardView
                                     android:id="@+id/FullamountSOT"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
                                     android:layout_marginEnd="@dimen/_5sdp"
                                     android:layout_weight="1"
                                     android:clickable="true"
-                                    app:cardBackgroundColor="@color/slidebtn_bg"
-                                    app:cardCornerRadius="@dimen/_21sdp">
+                                    app:cardCornerRadius="@dimen/_21sdp"
+                                    app:cardBackgroundColor="@color/slidebtn_bg">
 
                                     <TextView
                                         android:id="@+id/FullamountTV"
@@ -217,12 +217,12 @@
 
                                 <androidx.cardview.widget.CardView
                                     android:id="@+id/HalfamountSOT"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
                                     android:layout_marginStart="@dimen/_5sdp"
                                     android:layout_weight="1"
-                                    app:cardBackgroundColor="@color/slidebtn_bg"
-                                    app:cardCornerRadius="@dimen/_21sdp">
+                                    app:cardCornerRadius="@dimen/_21sdp"
+                                    app:cardBackgroundColor="@color/slidebtn_bg">
 
                                     <TextView
                                         android:id="@+id/halfamountTV"
