--- a/app/src/main/res/layout/activity_business_receive_payment.xml
+++ b/app/src/main/res/layout/activity_business_receive_payment.xml
@@ -14,14 +14,15 @@
         android:background="@drawable/bottomradius"
         android:orientation="vertical"
         android:layout_alignParentTop="true"
-        android:paddingStart="@dimen/_21sdp"
+        android:paddingStart="@dimen/_11sdp"
         android:paddingEnd="@dimen/_1sdp"
         android:visibility="visible">
 
         <LinearLayout
             android:id="@+id/receivePaymentLL"
-            android:layout_width="@dimen/_30sdp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_45sdp"
             android:orientation="horizontal">
 
@@ -33,7 +34,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_14sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:text="Receive Payment"
             android:textSize="@dimen/_16ssp"
             android:fontFamily="@font/opensans_bold"
