--- a/app/src/main/res/layout/posted_inner_item.xml
+++ b/app/src/main/res/layout/posted_inner_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ll_merchant_transaction_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -32,7 +31,6 @@
                 android:fontFamily="@font/opensans_semibold"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:text="Buy Tokens from Card "
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp"
                 android:visibility="visible" />
@@ -45,7 +43,6 @@
                 android:fontFamily="@font/opensans_semibold"
                 android:gravity="start"
                 android:singleLine="true"
-                android:text=" **1234"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp"
                 android:visibility="visible" />
@@ -72,11 +69,8 @@
             android:layout_marginTop="@dimen/_5sdp"
             android:fontFamily="@font/opensans_bold"
             android:gravity="center"
-            android:text="Pending"
             android:textColor="#FFA701"
             android:textSize="@dimen/_7ssp" />
-
-        <!--            </androidx.cardview.widget.CardView>-->
 
         <TextView
             android:id="@+id/balTXT"
@@ -88,7 +82,6 @@
             android:layout_weight="1"
             android:fontFamily="@font/opensans_semibold"
             android:gravity="right"
-            android:text="Balance "
             android:textColor="@color/light_gray"
             android:textSize="@dimen/_10ssp" />
 
@@ -110,9 +103,9 @@
         android:id="@+id/viewV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_5sdp"
         android:background="@color/white"
-        android:orientation="horizontal"
-        android:layout_marginBottom="@dimen/_5sdp">
+        android:orientation="horizontal">
 
         <View
             android:layout_width="@dimen/_11sdp"
