FIxed some issue

--- a/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
@@ -60,7 +60,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_14sdp"
+                    android:layout_marginBottom="@dimen/_7sdp"
                     android:orientation="vertical">
 
                     <TextView
@@ -88,9 +88,9 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
+                        android:layout_marginTop="@dimen/_10sdp"
                         android:gravity="center"
-                        android:layout_marginTop="@dimen/_10sdp">
+                        android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/payoutIDAmountTV"
@@ -104,8 +104,8 @@
                             android:id="@+id/cynTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_bold"
                             android:layout_marginStart="@dimen/_5sdp"
+                            android:fontFamily="@font/opensans_bold"
                             android:text="CYN"
                             android:textColor="@color/active_green"
                             android:textSize="@dimen/_16ssp" />
@@ -143,10 +143,10 @@
                             android:layout_width="@dimen/_68sdp"
                             android:layout_height="wrap_content"
                             android:background="@drawable/txn_completed_bg"
-                            android:paddingTop="@dimen/_3sdp"
-                            android:paddingBottom="@dimen/_3sdp"
                             android:fontFamily="@font/opensans_bold"
                             android:gravity="center"
+                            android:paddingTop="@dimen/_3sdp"
+                            android:paddingBottom="@dimen/_3sdp"
                             android:text=""
                             android:textColor="@color/active_green"
                             android:textSize="@dimen/_7sdp" />
@@ -232,7 +232,7 @@
                         android:orientation="horizontal"
                         android:paddingHorizontal="@dimen/_11sdp"
                         android:paddingTop="@dimen/_7sdp"
-                        android:paddingBottom="@dimen/_10sdp">
+                        android:paddingBottom="@dimen/_7sdp">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -276,7 +276,8 @@
                         android:orientation="horizontal"
                         android:paddingHorizontal="@dimen/_11sdp"
                         android:paddingTop="@dimen/_7sdp"
-                        android:paddingBottom="@dimen/_10sdp">
+                        android:paddingBottom="@dimen/_10sdp"
+                        android:visibility="gone">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -285,8 +286,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/reserve_id"
                             android:textColor="@color/xdark_gray"
-                            android:textSize="@dimen/_11ssp"
-                            />
+                            android:textSize="@dimen/_11ssp" />
 
                         <LinearLayout
                             android:id="@+id/payoutReserveIdLL"
@@ -352,8 +352,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_6sdp"
-                app:cardCornerRadius="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_2sdp">
+                android:layout_marginBottom="@dimen/_2sdp"
+                app:cardCornerRadius="@dimen/_10sdp">
 
                 <androidx.core.widget.NestedScrollView
                     android:id="@+id/nestedSV"
